# uptime-ss

./: .gitignore  AGENT_INTEGRATION_GUIDE.md  README.md  pyproject.toml
appscript/: check_bots.js
docs/superpowers/plans/: 2026-03-28-uptime-ss.md
docs/superpowers/specs/: 2026-03-28-uptime-ss-design.md
tests/: test_heartbeat.py  test_sheets.py
uptime_ss/: __init__.py  heartbeat.py  sheets.py
