[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uptime-ss"
version = "0.1.1"
description = "Lightweight async heartbeat monitor via Google Sheets"
requires-python = ">=3.9"
dependencies = [
    "aiogoogle>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["uptime_ss"]

[project.urls]
Repository = "https://github.com/recycletechno/uptime-ss"

[tool.pytest.ini_options]
asyncio_mode = "auto"
